# MedicalAgendaBackend

./: .gitignore  LICENSE  README.md  collect-migrate.sh  docker-compose.yml  dockerfile  pyproject.toml  railway.toml
core/: settings.py  storage.py  urls.py  views.py  wsgi.py
customAuth/: apps.py  serializers.py  urls.py  views.py
examenes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
examenes/migrations/: 0001_initial.py
medicos/: admin.py  apps.py  models.py  seeders.py  serializers.py  urls.py  views.py
medicos/migrations/: 0001_initial.py  0002_alter_especialidad_genero.py
reportes/: models.py  serializers.py  urls.py  views.py
reportes/migrations/: 0001_initial.py  0002_reportefile.py
static/: staticfiles.json
templates/admin/: index.html
usuarios/: admin.py  models.py  serializers.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py  0002_alter_usuario_email.py  0003_alter_usuario_email_alter_usuario_genero.py  0004_alter_usuario_email.py  0005_rename_emergency_contact_usuario_telefono_and_more.py  0006_alter_usuario_email.py  0007_alter_usuario_email.py
